--- a/css/whitestripes.webflow.css
+++ b/css/whitestripes.webflow.css
@@ -203,6 +203,7 @@ p {
 	.phone-button a {
 		width: 170px;
 		padding: 4px 9px;
+		display: inline;
 	}
 
 	.phone-button a img {
@@ -349,6 +350,13 @@ p {
 		bottom: 10px;
 		left: 50%;
 		margin-left: -75px;
+	}
+
+	.card .button img {
+		float: left;
+		margin-top: 5px;
+		margin-left: 10px;
+		margin-right: 0px;
 	}
 
 	.goods .card {
