--- a/css/whitestripes.webflow.css
+++ b/css/whitestripes.webflow.css
@@ -203,7 +203,6 @@ p {
 	.phone-button a {
 		width: 170px;
 		padding: 4px 9px;
-		display: inline;
 	}
 
 	.phone-button a img {
@@ -270,6 +269,7 @@ p {
 
 	.why513 {
 		background-color: rgb(231, 235, 253);
+		padding-bottom: 20px;
 	}
 
 
@@ -340,6 +340,7 @@ p {
 	}
 
 	.card {
+		padding-top: 5px;
 		position: relative;
 		background-color: white;
 		box-shadow: rgba(18, 20, 71, 0.63) 2px 2px 2px 2px;
