--- a/css/whitestripes.webflow.css
+++ b/css/whitestripes.webflow.css
@@ -66,7 +66,7 @@ p {
 	float: none;
 	clear: none;
 	border-radius: 0px;
-	background-color: #ad071d;
+	background-color: #d62539;
 	box-shadow: rgba(46, 3, 20, 0.95) 2px 2px 3px 0px;
 }
 
