--- a/css/whitestripes.webflow.css
+++ b/css/whitestripes.webflow.css
@@ -105,56 +105,8 @@ p {
 
 }
 
-.button.catalog-button {
-	box-shadow: #290000 2px 2px 3px 0px;
-	text-shadow: black 1px 1px 6px;
-}
-.header {
-	margin-bottom: 27px;
-}
 
-.logo {
-	float: left;
-}
-.slogan {
-	display: block;
-	overflow: hidden;
-	margin-right: 1px;
-	margin-left: 38px;
-	padding-right: 35px;
-	padding-left: 35px;
-	background-image: none;
-	font-family: 'museo_cyrl500', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: #d62539;
-	font-size: 34px;
-	text-transform: none;
-}
-.presentation {
-	width: auto;
-	height: 315px;
-	background-image: url(../images/sl2.jpg);
-	background-size: 960px;
-	background-repeat: no-repeat no-repeat;
-	box-shadow: #183663 5px 1px 35px 5px;
-}
-.action {
-	position: static;
-	margin: 6px 14px -1px 0px;
-	padding: 2px 15px 10px;
-	float: right;
-	background-color: rgba(255, 255, 255, 0.70);
-	box-shadow: #787878 1px 1px 3px 0px;
-	text-align: center;
-}
 
-.action h3 {
-margin-top: 5px;
-}
-
-.actions {
-	position: static;
-	display: block;
-}
 
 
 .vk {
@@ -206,17 +158,40 @@ margin-top: 5px;
 
 
 /** header */
+	.header {
+		margin-bottom: 27px;
+	}
+
+	.logo {
+		float: left;
+	}
+	.slogan {
+		display: block;
+		overflow: hidden;
+		margin-right: 1px;
+		margin-left: 38px;
+		padding-right: 35px;
+		padding-left: 35px;
+		background-image: none;
+		font-family: 'museo_cyrl500', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+		color: #d62539;
+		font-size: 3.1em;
+		text-transform: none;
+		margin-top: 1.1em;
+		text-shadow: 1px 1px 2px rgba(192, 26, 59, 0.5);
+		text-align: center;
+	}
 	.phone-link {
 		text-decoration: none;
 		font-size: 1.9em;
 		color: #06153e;
 		font-weight: bold;
-
+		line-height: 1.5em;
 	}
 
 	.connection {
 		float: right;
-		margin-top: 2em;
+		margin-top: 0.8em;
 	}
 
 	.phone-button {
@@ -241,10 +216,44 @@ margin-top: 5px;
 		box-shadow: white 0px 0px 6px 0px;
 	}
 
+	.presentation {
+		width: auto;
+		height: 315px;
+		background-image: url(../images/sl2.jpg);
+		background-size: 960px;
+		background-repeat: no-repeat no-repeat;
+		box-shadow: #183663 5px 1px 35px 5px;
+	}
+	.action {
+		position: static;
+		margin: 6px 14px -1px 0px;
+		padding: 2px 15px 10px;
+		float: right;
+		background-color: rgba(255, 255, 255, 0.70);
+		box-shadow: #787878 1px 1px 3px 0px;
+		text-align: center;
+		width: 320px;
+	}
+
+	.action h3 {
+		margin-top: 5px;
+	}
+
+	.actions {
+		position: static;
+		display: block;
+	}
+
+	.action-trigger {
+		float: left;
+		margin-left: 1.9em;
+		margin-bottom: 0.5em;
+	} 
+
 /** action */
 	.action-text {
 		padding-top: 10px;
-		padding-bottom: 20px;
+		padding-bottom: 10px;
 		font-size: 16px;
 		font-weight: 700;
 	}
@@ -264,8 +273,9 @@ margin-top: 5px;
 
 /** Fears and conscious */
 	.fears {
-		max-width: 750px;
+		max-width: 760px;
 		margin: 0 auto;
+		padding: 0 5px;
 	}
 
 	.problem {
@@ -276,6 +286,7 @@ margin-top: 5px;
 	}
 	.solution {
 		margin-bottom: 1.5em;
+		font-size: 1.2em;
 	}
 
 	.step {
@@ -301,6 +312,7 @@ margin-top: 5px;
 
 /** advantages */
 	.advantages {
+		font-size: 1.2em;
 		list-style: url("../images/starlist.png");
 
 	}
@@ -308,6 +320,17 @@ margin-top: 5px;
 	.why513 {
 		background-color: rgb(231, 235, 253);
 		padding-bottom: 20px;
+	}
+
+	.catalog-button {
+		box-shadow: #290000 2px 2px 3px 0px;
+		text-shadow: black 1px 1px 6px;
+		width: 240px;
+	}
+
+	.catalog-button a {
+		width: 240px;
+		font-size: 1.2em;
 	}
 
 
@@ -417,4 +440,16 @@ margin-top: 5px;
 		padding-top: 5em;
 		padding-bottom: 5em;
 		background-color: rgb(231, 235, 253);
+	}
+
+	.back-call {
+		width: 240px;
+	}
+
+	.back-call a {
+		width: 240px;
+	}
+
+	.footer > div > div {
+		display: inline-block;
 	}
