--- a/css/whitestripes.webflow.css
+++ b/css/whitestripes.webflow.css
@@ -250,7 +250,7 @@ p {
 	.presentation {
 		width: auto;
 		height: 315px;
-		background-image: url(../images/backphoto.png);
+		background-image: url(../images/backphoto3.jpg);
 		background-size: 960px;
 		background-repeat: no-repeat no-repeat;
 		box-shadow: #183663 5px 1px 35px 5px;
