--- a/css/whitestripes.webflow.css
+++ b/css/whitestripes.webflow.css
@@ -125,7 +125,7 @@ p {
 	box-shadow: rgba(46, 3, 20, 0.95) 2px 2px 3px 0px;
 }
 
-.buttonsub a {
+.buttonsub span {
 	vertical-align: middle;
 	display: table-cell;
 	color: white;
@@ -146,6 +146,7 @@ p {
 	float: none;
 }
 .group {
+	padding-top: 10px;
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
@@ -154,13 +155,21 @@ p {
 .bonus-face {
 	float: left;
 }
+
+.certificates {
+	color: #03081D;
+}
+
+
 .adv-list {
 	padding-right: 20px;
 	float: left;
 }
 
 .action-head {
-	
+	margin: 0; 
+	font-size: 1.2em;
+	font-weight: bold;
 	color: #06153d;
 }
 @media (max-width: 991px) {
@@ -229,12 +238,12 @@ p {
 		margin-top: 1em;
 	}
 
-	.phone-button a {
-		width: 170px;
+	.phone-button span {
+		width: 180px;
 		padding: 4px 9px;
 	}
 
-	.phone-button a img {
+	.phone-button span img {
 		display: inline-block;
 		float: left;
 		margin-top: 8px;
@@ -242,7 +251,7 @@ p {
 	}
 
 /** presentation */
-	.up {
+	.top-site {
 		background-image: url(../images/crest-ph-bg.jpg);
 		box-shadow: white 0px 0px 6px 0px;
 	}
@@ -274,14 +283,13 @@ p {
 	}
 
 	.action h3 {
+		margin-bottom: 0;
 		margin-top: 5px;
 	}
 
 	.actions {
 		position: static;
 		display: block;
-		padding-top: 10px;
-
 	}
 
 	.action-trigger {
@@ -300,6 +308,12 @@ p {
 
 	.accent{
 		color: #8a1f4d;
+	}
+
+	.countdown {
+		margin: 0 auto;
+		margin-bottom: 10px;
+		width: 210px;
 	}
 
 
@@ -377,12 +391,15 @@ p {
 		width: 240px;
 	}
 
-	.catalog-button a {
+	.catalog-button span {
 		width: 240px;
 		font-size: 1.2em;
 	}
 
 
+	#upcounter {
+		display: inline-block;
+	}
 /*  feedbacks*/
 	.feedback {
 		position: static;
@@ -447,14 +464,16 @@ p {
 
 	/* carousel */
 		.feedbackslide {
+			padding: 0 30px;
 			position: relative;
+			max-width: 960px;
 		}
 
 		.feedbackslide li {
 			width: 250px;
 		}
 		.rs-carousel-horizontal .rs-carousel-item {
-			margin: 0 3em;
+			margin: 0 25px;
 		}
 
 		.rs-carousel-action {
@@ -466,8 +485,8 @@ p {
 			right: 0;
 			top: 50%;
 			background: url(../images/feedback/arrow-right.png) no-repeat;
-			width: 16px;
-			height: 30px;
+			width: 50px;
+			height: 50px;
 		}
 
 		.rs-carousel-action-prev {
@@ -475,10 +494,45 @@ p {
 			left: 0;
 			top: 50%;
 			background: url(../images/feedback/arrow-left.png) no-repeat;
-			width: 16px;
-			height: 30px;
+			width: 50px;
+			height: 50px;
 		}
 
+		.rs-carousel-item {
+			background-color: white;
+			text-align: left;
+			padding: 7px 11px;
+			font-size: 12px;
+			height: 520px;
+			position: relative;
+		}
+
+		.rs-carousel-item img {
+			margin: 0 auto;
+			display: block;
+		}
+
+		.rs-carousel-item .content {
+			line-height: 1.2em;
+			font-style: italic;
+		}
+		.rs-carousel-item .vk-link {
+			position: absolute;
+			bottom: 10px;
+			color: #06153e;
+		}
+		.rs-carousel-item h4,  .rs-carousel-item h5 {
+			text-align: left;
+			font-size: 1em;
+			line-height: 1.2em;
+		}
+		.rs-carousel-item h5 {
+			margin-top: 0;
+		}
+		.rs-carousel-item h4 {
+			color: #8a1f4d;
+			margin-bottom: 0;
+		}
 /* catalog */
 
 	.good {
@@ -550,7 +604,7 @@ p {
 		width: 240px;
 	}
 
-	.back-call a {
+	.back-call span {
 		width: 240px;
 	}
 
