--- a/css/form.css
+++ b/css/form.css
@@ -3,7 +3,7 @@
 }
 
 .md-content h3 {
-	color: #e67e22;
+	color: white;
 }
 
 form {
@@ -24,11 +24,16 @@ form .md-close, form .submit-button {
 	height: 3em;
 	border: none;
 	background: none;
-	font-size: 1em;
+	font-size: 1.1em;
 	background-color: rgba(0,0,0,0.3);
 	color: white;
 	display: inline-block;
 }
+form .submit-button {
+	background-color: rgba(226,90,163,1);
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
 form .form-controls {
 	width: 100%;
 	margin-top: 5%;
@@ -39,6 +44,13 @@ form .form-controls:after {
 	display: inline-block;
 	width: 100%;
 	content: "";
+}
+
+.disclaimer {
+	text-align: center;
+	font-size: 1.2em;
+	color: black;
+	font-weight: bold;
 }
 
 .error-panel {
